# text_calculator

./: .gitignore  CMakeLists.txt  README.md
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  textcalc_jni.cpp
android/app/src/main/java/com/textcalculator/: EnterInsertion.java  EvalResult.java  MainActivity.java  NativeCalculator.java
android/app/src/main/res/values/: strings.xml  styles.xml
harmony/: build-profile.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
harmony/entry/src/main/cpp/types/libtextcalc/: index.d.ts  oh-package.json5
harmony/entry/src/main/ets/entryability/: EntryAbility.ets
harmony/entry/src/main/ets/pages/: Index.ets
harmony/entry/src/main/resources/base/element/: color.json  string.json
harmony/hvigor/: hvigor-config.json5
scripts/: build-all.bat  build-all.ps1  build-android.bat  build-android.ps1  build-harmony.bat  build-harmony.ps1  build-mingw.bat  build-mingw.ps1  build-msvc.bat  build-msvc.ps1  generate-icon.py
src/: editor_logic.cpp  editor_logic.h  expression_engine.cpp  expression_engine.h  main.cpp  text_calculator.rc  textcalc_c_api.cpp  textcalc_c_api.h
tests/: engine_tests.cpp
